[project]
name = "fooocuscustom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.32.1",
    "addict==2.4.0",
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.3.7",
    "aiohttp==3.10.4",
    "aiosignal==1.3.1",
    "altair==5.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.4.0",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "einops==0.8.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.112.1",
    "ffmpy==0.4.0",
    "filelock==3.15.4",
    "flatbuffers==24.3.25",
    "fonttools==4.53.1",
    "frozenlist==1.4.1",
    "fsspec==2024.6.1",
    "gradio-client==0.5.0",
    "gradio==3.41.2",
    "groundingdino-py==0.4.0",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "huggingface-hub==0.24.5",
    "humanfriendly==10.0",
    "idna==3.7",
    "imageio==2.35.1",
    "importlib-metadata==8.2.0",
    "importlib-resources==6.4.3",
    "jinja2==3.1.4",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.23.0",
    "kiwisolver==1.4.5",
    "lazy-loader==0.4",
    "lightning-utilities==0.11.6",
    "llvmlite==0.43.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "mpmath==1.3.0",
    "multidict==6.0.5",
    "narwhals==1.4.2",
    "networkx==3.3",
    "numba==0.60.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "onnxruntime==1.18.1",
    "opencv-contrib-python-headless==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "opencv-python==4.10.0.84",
    "orjson==3.10.7",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "platformdirs==4.2.2",
    "pooch==1.8.2",
    "protobuf==5.27.3",
    "psutil==6.0.0",
    "pycocotools==2.0.8",
    "pycparser==2.22",
    "pydantic-core==2.20.1",
    "pydantic==2.8.2",
    "pydub==0.25.1",
    "pygit2==1.15.1",
    "pymatting==1.1.12",
    "pyparsing==3.1.2",
    "pyreadline3==3.4.1",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.9",
    "pytorch-lightning==2.3.3",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "referencing==0.35.1",
    "regex==2024.7.24",
    "rembg==2.0.57",
    "requests==2.32.3",
    "rpds-py==0.20.0",
    "safetensors==0.4.3",
    "scikit-image==0.24.0",
    "scipy==1.14.0",
    "segment-anything==1.0",
    "semantic-version==2.10.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "starlette==0.38.2",
    "supervision==0.6.0",
    "sympy==1.13.2",
    "tifffile==2024.8.10",
    "timm==1.0.7",
    "tokenizers==0.19.1",
    "tomli==2.0.1",
    "torch==2.1.0+cu121",
    "torchmetrics==1.4.1",
    "torchsde==0.2.6",
    "torchvision==0.16.0+cu121",
    "tqdm==4.66.4",
    "trampoline==0.1.2",
    "transformers==4.42.4",
    "triton",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "uvicorn==0.30.6",
    "websockets==11.0.3",
    "yapf==0.40.2",
    "yarl==1.9.4",
    "zipp==3.20.0",
]

[tool.uv.sources]
triton = { url = "https://huggingface.co/Kefasu/triton/resolve/main/triton-2.1.0-cp310-cp310-win_amd64.whl" }
